fix media embed spacing

--- a/css/index.css
+++ b/css/index.css
@@ -135,7 +135,7 @@ footer {
   padding-left: 16px;
 }
 
-.sc-embed {
+.yt-embed {
   margin-top: 8px;
 }
 
